--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,22 @@
 encoding: utf-8
-permalink: /blog/:year/:month/:title.html 
 
-# highlight: true
-highlighter: rouge
 markdown: kramdown
 kramdown:
   input: GFM
 
-# gems: [jekyll-paginate]
-paginate: 1
-paginate_path: "page:num"
+highlighter: rouge
+
+paginate: 5
+
+# excerpt_separator: "\n\n"
+permalink: /:year/:month/:day/:title/
+gems:
+    - rouge
+    - jekyll-paginate
+    # - jekyll-sitemap
+    # - jekyll-feed
+    # - jemoji
+#     - jekyll-mentions
 
 # date_format: "%Y-%m-%d"  # e.g. 2014-07-03
 # time_format: "%H:%M"     # 24 hour time
